# pathogen-daily-intelligence

./: .gitignore  MANIFEST_SHA256.txt  README.md  TEST_REPORT_v1.txt  TEST_REPORT_v1_1.txt  TEST_REPORT_v1_2.txt  TEST_REPORT_v1_3.txt  TEST_REPORT_v1_3_1.txt  TEST_REPORT_v1_5.txt  TEST_REPORT_v1_6.txt  TEST_REPORT_v2_0.txt  app.py  pyproject.toml  requirements-local-mt.txt  requirements.txt
.streamlit/: config.toml  secrets.example.toml
data/: history_index.json  latest.json  latest_items.csv
demo/: feed.xml  index.html  latest.json
docs/: ARCHITECTURE.md  SOURCES.md  Streamlit私有仓库部署.md  v1.1更新说明.md  v1.3.1故障修复与审计报告.md  v1.4网页结果问题分析与修复审计.md  v1.5文献证据补全与紧凑语言切换审计.md  v1.6翻译质量本地兜底与证据身份审计.md  v1.7审计与修复报告.md  全流程与LLM审计逻辑.md  实现与审计注意事项.md  数据对象与目录.md  部署与Secrets说明.md
pages/: 1_公共卫生事件.py  2_学术文献.py  3_来源健康.py  4_历史审计.py  5_配置与词典.py  6_新闻文章.py  6_静态日报与下载.py  7_LLM提示词与审计.py
prompt_review/: PRODUCTION_PROMPTS_COMBINED.md  PROMPT_INDEX.md
prompts/: ambiguous_dedup.md  bilingual_translation_batch.txt  daily_synthesis.txt  literature_analysis.txt  media_news_analysis.txt  news_analysis.md  official_notice_analysis.txt  profile_bootstrap.md  research_analysis.md  review_analysis.md  translate_zh.md  translation_repair.txt
schemas/: daily_issue.schema.json  news_article.schema.json  pathogen_profile.schema.json  public_health_event.schema.json  scholarly_work.schema.json
scripts/: bootstrap_pathogen.py  github_first_push_template.sh  github_sync_update_template.sh  refresh_profile.py  run_daily.py  send_email.py  validate_project.py
site/: feed.xml  index.html  (+1 more)
(+124 files in other folders)
