[project]
name = "pathogen-daily-intelligence"
version = "1.5.0"
description = "GitHub Actions + Streamlit Layered scholarly evidence recovery, compact bilingual controls, current-availability-date, dynamic multi-model, evidence-audited bilingual pathogen daily intelligence system"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
