[project]
name = "pathogen-daily-intelligence"
version = "1.6.0"
description = "GitHub Actions + Streamlit Local-Marian translation fallback, independent translation quality verification, layered scholarly evidence recovery, compact bilingual controls, current-availability-date and evidence-audited pathogen daily intelligence system"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
