[project]
name = "pathogen-daily-intelligence"
version = "2.0.0"
description = "Seven-day pathogen literature and news intelligence for GitHub Pages with profile bootstrap, evidence recovery, LLM analysis, bilingual translation, and Python translation fallback."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
